--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/RodrigoLima98/video-mk#readme",
   "dependencies": {
-    "readline-sync": "^1.4.9"
+    "algorithmia": "^0.3.10",
+    "balanced-match": "^1.0.0",
+    "readline-sync": "^1.4.9",
+    "sbd": "^1.0.15"
   }
 }
