--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "algorithmia": "^0.3.10",
     "balanced-match": "^1.0.0",
     "readline-sync": "^1.4.9",
-    "sbd": "^1.0.15"
+    "sbd": "^1.0.15",
+    "watson-developer-cloud": "^4.0.1"
   }
 }
